# instruct_trad

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  datasets.yaml  docker-compose.yml  main.py  pyproject.toml  sample_stats.json  test_docker.py  test_flask_startup.py  test_integration_demo.py
docs/: DOCKER_DEPLOYMENT.md  WEB_INTERFACE_USAGE.md
examples/: config_advanced.yaml  config_minimal.yaml  usage_examples.md
src/medical_dataset_processor/: __init__.py  cli.py  pipeline.py
src/medical_dataset_processor/exporters/: __init__.py  jsonl_exporter.py  pdf_sample_generator.py
src/medical_dataset_processor/loaders/: __init__.py  dataset_loader.py
src/medical_dataset_processor/models/: __init__.py  core.py
src/medical_dataset_processor/processors/: __init__.py  dataset_consolidator.py  generation_processor.py  sample_selector.py  translation_processor.py
src/medical_dataset_processor/utils/: __init__.py  logging.py  state_recovery.py
src/medical_dataset_processor/web/: __init__.py  app.py  models.py  run_server.py  translation_service.py
tests/: test_cli.py  test_cli_integration.py  test_dataset_consolidator.py  test_dataset_loader.py  test_generation_integration.py  test_generation_processor.py  test_jsonl_exporter.py  test_logging.py  test_models.py  test_pdf_sample_generator.py  test_pipeline_integration.py  test_sample_selector.py  test_state_recovery.py  test_translation_integration.py  test_translation_processor.py  test_web_app.py  test_web_integration_e2e.py  test_web_models.py  test_web_translation_integration.py
(+10 files in other folders)
