[project]
name = "medical-dataset-processor"
version = "0.1.0"
description = "Automated medical dataset processing with translation and content generation"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "deepl",
    "openai",
    "pyyaml",
    "reportlab",
    "datasets",
    "click",
    "rich",
    "flask>=2.3.0",
    "flask-cors>=4.0.0"
]

[project.scripts]
medical-dataset-processor = "medical_dataset_processor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
